[package]
name = "doc-test"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
async-stream = "0.2"
mini-redis = { git = "https://github.com/tokio-rs/mini-redis", branch = "track-1.0" }
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["full"] }
tokio-stream = { git = "https://github.com/tokio-rs/tokio" }
bytes = { git = "https://github.com/tokio-rs/bytes" }
futures = "0.3"
doc-comment = "0.3.3"
crossbeam = "0.7"

[build-dependencies]
glob = "0.3"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio" }
bytes = { git = "https://github.com/tokio-rs/bytes" }