[package]
name = "doc-test"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
async-stream = "0.2"
mini-redis = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1"
futures = "0.3"
doc-comment = "0.3.3"
crossbeam = "0.7"

[build-dependencies]
glob = "0.3"
