[package]
name = "doc-test"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
build = "build.rs"
publish = false

[dependencies]
async-stream = "0.3"
mini-redis = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tokio-stream = "0.1"
bytes = "1"
futures = "0.3"
doc-comment = "0.3.3"
crossbeam = "0.8"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
console-subscriber = "0.4.1"
opentelemetry = "0.27.1"
tracing-opentelemetry = "0.28.0"
opentelemetry-aws = "0.15.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-jaeger = "0.22.0"

[build-dependencies]
glob = "0.3"
