[workspace]

members = [
    "hello-tokio",
    "spawning",
    "shared-state",
    "channels",
    "io",
    "mini-tokio",
    "streams",
]

[patch.crates-io]
mini-redis = { git = "https://github.com/tokio-rs/mini-redis", branch = "track-1.0" }
tokio = { git = "https://github.com/tokio-rs/tokio" }
