[package]
name = "channels"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["full"] }
bytes = { git = "https://github.com/tokio-rs/bytes" }
mini-redis = { git = "https://github.com/tokio-rs/mini-redis", branch = "track-1.0" }