[package]
name = "io"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
publish = false

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"

[[bin]]
name = "echo-server-copy"
path = "src/echo-server-copy.rs"


[dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["full"] }
mini-redis = { git = "https://github.com/tokio-rs/mini-redis", branch = "track-1.0" }